@@ -12,6 +12,7 @@ from gi.repository import Gtk
 import mock
 
 from ubiquity import i18n, plugin_manager
+from helpers import builtin_patch
 
 def side_effect_factory(real_method):
     new_path = 'd-i/source/localechooser/debian/localechooser' \
@@ -45,7 +46,7 @@ class OEMUserLanguageTests(unittest.TestCase):
         # GtkIconViewItem GList.
         if 'UBIQUITY_TEST_INSTALLED' not in os.environ:
             real_method = open
-            method = mock.patch('__builtin__.open')
+            method = builtin_patch('open')
             mocked_method = method.start()
             mocked_method.side_effect = side_effect_factory(real_method)
             self.addCleanup(method.stop)
